# team-aquila

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RUNBOOK.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_output.json
.github/workflows/: ci.yml
contexts/evaluation-rubrik/: evaluation_rubric.md
contexts/problem-statements/: problem_statement.md
contexts/team-instructions/: team_instruction_manual.md
deploy/: Dockerfile  docker-compose.yml  gunicorn_conf.py
docs/: README.md  SLIDES.md  VIDEO-SCRIPT.md
docs/01-overview/: README.md
docs/02-architecture/: README.md
docs/03-api-contract/: README.md
docs/04-investigation-pipeline/: README.md
docs/05-normalization/: README.md
docs/06-classification/: README.md
docs/07-evidence-matching/: README.md
docs/08-routing-and-severity/: README.md
docs/09-safety-system/: README.md
docs/10-text-generation/: README.md
docs/11-reliability-and-performance/: README.md
docs/12-deployment/: README.md
docs/13-testing-and-validation/: README.md
docs/14-decision-matrix/: README.md
docs/diagrams/: README.md
scripts/: generate_sample_output.py  score_cases.py  smoke.sh  train_classifier.py
src/queuestorm/: __init__.py  main.py
src/queuestorm/api/: errors.py  middleware.py
src/queuestorm/core/: config.py  logging.py
tests/: cases.json  conftest.py
tests/integration/: test_api_contract.py  test_multilingual_corpus.py  test_samples.py
tests/unit/: test_classification.py  test_matching_routing.py  test_normalization.py  test_safety.py
(+16 files in other folders)
